[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Enimies/Perseguidores/Enemy_chaser_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Enimies/EnemyAttack/Enemy_shooter.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 200.0

[sub_resource type="CircleShape2D" id=2]
radius = 130.0

[node name="Enemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )
velocidade = 100

[node name="Sprite" parent="." index="0"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, 0 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 0 )

[node name="CollisionShape2D" parent="Range" index="0"]
shape = SubResource( 1 )

[node name="Range_shoot" type="Area2D" parent="." index="10"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range_shoot" index="0"]
shape = SubResource( 2 )

[node name="ShootTimer" type="Timer" parent="." index="11"]
wait_time = 0.5
one_shot = true
[connection signal="body_entered" from="Range_shoot" to="." method="_on_Range_shoot_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]

[editable path="HurtBox"]

[editable path="Hitbox"]

[editable path="Range"]
